Adding scripts and styles

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   <main class="content_wrapper">
     <article class="container">
       <span>Advice #<small id="adviceId"></small></span>
-      <div class="content">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos repudiandae inventore ducimus, et voluptas optio. Dignissimos, numquam! Laboriosam, voluptatibus ad."</div>
+      <div class="generatedAdvice">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos repudiandae inventore ducimus, et voluptas optio. Dignissimos, numquam! Laboriosam, voluptatibus ad."</div>
       <div class="partitionImage">
         <img src="./images/pattern-divider-desktop.svg" alt="">
       </div>
 
     </article>
+    <div class="diceBtn">
+      <button class="btn"><img src="./images/icon-dice.svg" alt=""></button>
+    </div>
   </main>
 
   <script src="./main.js"></script>
