Adding all styles and responsiveness.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <main class="content_wrapper">
     <article class="container">
-      <span>Advice #<small id="adviceId"></small></span>
-      <div class="generatedAdvice">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos repudiandae inventore ducimus, et voluptas optio. Dignissimos, numquam! Laboriosam, voluptatibus ad."</div>
+      <span>Advice  #<small id="adviceId"></small></span>
+      <div class="generatedAdvice"></div>
       <div class="partitionImage">
-        <img src="./images/pattern-divider-desktop.svg" alt="">
+        <img src="./images/pattern-divider-desktop.svg" alt="" id="divider">
       </div>
 
     </article>
