--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <main class="content_wrapper">
     <article class="container">
-      <span>Advice  #<small id="adviceId"></small></span>
-      <div class="generatedAdvice"></div>
+      <span>Advice  #<small id="adviceId">117</small></span>
+      <div class="generatedAdvice">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</div>
       <div class="partitionImage">
         <img src="./images/pattern-divider-desktop.svg" alt="" id="divider">
       </div>
