--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./style.css">
-  <title>Frontend Mentor | Advice generator app</title>
-</head>
-<body>
-  <main class="content_wrapper">
-    <article class="container">
-      <span>Advice  #<small id="adviceId">117</small></span>
-      <div class="generatedAdvice">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</div>
-      <div class="partitionImage">
-        <img src="./images/pattern-divider-desktop.svg" alt="" id="divider">
-      </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Frontend Mentor | Advice generator app</title>
+  </head>
+  <body>
+    <main class="content_wrapper">
+      <article class="container">
+        <span>Advice #<small id="adviceId">117</small></span>
+        <div class="generatedAdvice">
+          "It is easy to sit up and take notice, what's difficult is getting up
+          and taking action."
+        </div>
 
-    </article>
-    <div class="diceBtn">
-      <button class="btn"><img src="./images/icon-dice.svg" alt=""></button>
-    </div>
-  </main>
+        <img src="./images/pattern-divider-desktop.svg" alt="" id="divider" />
 
-  <script src="./main.js"></script>
-</body>
+        <div class="diceBtn">
+          <img src="./images/icon-dice.svg" alt="" / class="btn">
+        </div>
+      </article>
+    </main>
+
+    <script src="./main.js"></script>
+  </body>
 </html>
